added scopes for filters,refile for file uploads,better styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,6 +52,8 @@
 	}
 }
 
+//car-show
+
 //nav
 .navbar-default{
 	margin-bottom: 0px;
@@ -97,6 +99,13 @@
 		text-align: center;
 	}
 	p{
+		text-align: center;
+	}
+}
+
+//newcar
+.newcarlisting{
+	h1{
 		text-align: center;
 	}
 }
