--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,37 +1,48 @@
-<%= form_for(@car) do |f| %>
-  <% if @car.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@car.errors.count, "error") %> prohibited this car from being saved:</h2>
+<div class= "well car-form">
+    <%= form_for(@car) do |f| %>
+      <% if @car.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@car.errors.count, "error") %> prohibited this car from being saved:</h2>
 
-      <ul>
-      <% @car.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% @car.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :make %><br>
-    <%= f.text_field :make %>
-  </div>
-  <div class="field">
-    <%= f.label :kind %><br>
-    <%= f.text_field :kind %>
-  </div>
-  <div class="field">
-    <%= f.label :year %><br>
-    <%= f.number_field :year %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description, rows: 3 %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+      <div class="field form-group">
+        <%= f.label :price %><br>
+        <div class="input-group">
+          <div class="input-group-addon">$</div>
+          <%= f.text_field :price, class: "form-control" %>
+          <div class="input-group-addon">.00</div>
+        </div>
+      </div>
+      <div class="field form-group">
+        <%= f.label :make %><br>
+        <%= f.text_field :make, class: "form-control" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :kind %><br>
+        <%= f.text_field :kind, class: "form-control" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :year %><br>
+        <%= f.number_field :year, within: 1950..(Time.now.year), class: "form-control" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :description %><br>
+        <%= f.text_area :description, rows: 3, class: "form-control" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :car_image %><br>
+        <%= f.attachment_field :car_image, class: "form-control" %>
+      </div>
+      <div class="actions form-group">
+        <%= f.submit class: "btn btn-primary" %>
+      </div>
+
+    <% end %>
+</div>
