--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Car</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', cars_path %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4 newcarlisting">
+			<h1>List a Car!</h1>
+			<%= render 'form' %>
+		</div>
+	</div>
+	<div><%= link_to 'Back', cars_path %></div>
+</div>
