--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Lora:400,700);
- $navbar-default-bg: #000033;
+ $nav-footer-bg: rgba(127,255,212,1);
+ $navbar-default-bg: $nav-footer-bg;
  $navbar-default-link-color: #fff ;
  $navbar-default-link-active-color: #CCE5FF;
  $navbar-default-link-hover-color: #CCFFFF;
@@ -8,6 +9,7 @@
  $navbar-default-link-active-bg: $navbar-default-bg;
  $input-border-focus: #fff;
  $font-family-base: 'Lora','Helvetica Neue', Helvetica, Arial, sans-serif;
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -27,10 +29,42 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+@mixin showbutton {
+	position: absolute;
+	bottom: 5px;
+	left: 50px;
+	right: 50px;
+}
 //index
+.car-block{
+	margin: 10px auto;
+	.show-btn{
+	  border: 0;
+  	  background: #0087cc;
+	  border-radius: 4px;
+	  box-shadow: 0 5px 0 #006599;
+	  color: #fff;
+	  cursor: pointer;
+	  font: inherit;
+	  margin: 0;
+	  outline: 0;
+	  padding: 12px 20px;
+	  transition: all .1s linear;
+		&:active{
+			box-shadow: 0 1px 0 #006599;
+  			transform: translateY(5px);
+		}
+	}
+}
+.thumbnail{
+	height: 450px;
+}
 .thumbnail div.caption{
-	h3,p{
+	h4,p{
 		text-align: center;
+	}
+	.show-btn{
+		@include showbutton;
 	}
 }
 .thumbnail > img{
@@ -49,6 +83,7 @@
 		padding-top: 30px;
 		text-align: center;
 		font-size: 50px;
+		color: rgba(45, 78, 98,1);
 	}
 }
 
@@ -103,6 +138,10 @@
 	}
 }
 
+.filter-group{
+	margin-right:30px;
+}
+
 //newcar
 .newcarlisting{
 	h1{
@@ -116,3 +155,34 @@
 	text-align:center;
 }
 
+//footer
+.footer{
+	min-height: 50px;
+	background-color: $nav-footer-bg;
+	position: absolute;
+  	right: 0px;
+  	left: 0px;
+  	font-size: 12px;
+  	.copyright{
+  		display: inline;
+  		
+  	}
+  	.disclaimer{
+  		display: inline;
+
+  	}
+}
+
+.log-in-form{
+	  border: 50px solid rgba(0,0,0,0);
+  	  border-radius: 5px;
+      transition: 0.5s ease;
+      -webkit-transition: 0.5s ease;
+      -moz-transition: 0.5s ease;
+      -o-transition: 0.5s ease;
+      &:hover{
+      	border-width: 0;
+		border-color: rgba(127,255,212,.5);
+		border-style: double;
+      }
+}
