--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -25,7 +25,21 @@
       <h3>Meet the Seller: </h3>
       <p>
         <aside>Contact <%= @car.user.name %> </aside>
-        <%= @car.user.description %>
+        
+        <%= form_tag(contact_path,remote: true, role: "form", id: "contact_form") do %>
+          <div class="row">
+            <div class="form-group col-lg-12">
+                <%= text_area_tag :content,"Send an e-mail!",class: "form-control" %>
+                <%= hidden_field_tag :recipient, @car.user.email %>
+            </div>
+            <div class="form-group col-lg-12">
+              <%= button_tag "Send!", class: "btn btn-default", data: { disable_with: "<i class='fa fa-spinner'></i>" } %>
+            </div>
+          </div>
+        <% end %>
+        <p>
+          <u>About:</u> <%= @car.user.description %>
+        </p>
       </p>
   </div>
 
