--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -53,21 +53,23 @@
 
             <div class="nav navbar-nav navbar-right">
 
-                <div class="hidden-xs hidden-sm col-md-12 session_toggle">
-                  <% if current_user.nil? %>
-                    <li><%= link_to "Sign In", new_user_session_path, class: "session_status" %></li>
-                  <% else %>
-                    <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "session_status" %></li>
-                  <% end %>
-                </div>
+                <% if user_signed_in? %>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><%= link_to "Your Profile", profiles_path %> </li>
+                        <li><%= link_to "Your Charges", purchases_path %></li>
+                      </ul>
+                    </li>
+                 <% end %>
 
-                <div class="col-xs-4 col-xs-offset-4 col-sm-6 col-sm-offset-4 hidden-md hidden-lg session_toggle">
-                  <% if current_user.nil? %>
-                    <li><%= link_to "Sign In", new_user_session_path, class: "session_status" %></li>
-                  <% else %>
-                    <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "session_status" %></li>
-                  <% end %>
-                </div>
+                  <!--<div class="col-xs-4 col-xs-offset-4 col-sm-6 col-sm-offset-4 col-md-12 session_toggle">-->
+                    <% if current_user.nil? %>
+                      <li><%= link_to "Sign In", new_user_session_path, class: "session_status" %></li>
+                    <% else %>
+                      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "session_status" %></li>
+                    <% end %>
+                  <!--</div> -->
             </div>
       </div>
     </div><!-- /.navbar-collapse -->
