--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -19,7 +19,7 @@
     <%= @car.year %>
   </p>
   <p>
-    <%= image_tag attachment_url(@car, :car_image, :fill, 300, 300, format: "jpeg") if @car.car_image %>
+    <%= @car.car_image.nil? ? image_tag("http://fillmurray.com/250/200", alt: 'car') : (image_tag attachment_url(@car, :car_image, :fill, 300, 300, format: "jpeg")) %>
   </p>
   <div class="well">
       <h3>Meet the Seller: </h3>
